new stuff added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <div class="whom-wrapper">
         <div class="whom">
             <p class="whom-text">The Adorable,</p>
-            <p class="whom-text">Admirable,</p>
+            <p class="whom-text">Amazing,</p>
+            <p class="whom-text">Wonderful,</p>
             <p class="whom-text">Gorgeous Girl</p>
         </div>
     </div>
@@ -102,6 +103,33 @@
                 <div class="pragati-a pragati-letter">A</div>
                 <div class="pragati-t pragati-letter">T</div>
                 <div class="pragati-i pragati-letter">I</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- pragati's full form -->
+    <div class="pragati-full-form-wrapper">
+        <div class="pragati-full-form">
+            <div class="pragati-ff-p">
+                <p class="pragati-ff-p-text pragati-ff-text"><span class="pragati-ff-fl">P</span>rudent</p>
+            </div>
+            <div class="pragati-ff-r">
+                <p class="pragati-ff-r-text pragati-ff-text"><span class="pragati-ff-fl">R</span>esponsible</p>
+            </div>
+            <div class="pragati-ff-a">
+                <p class="pragati-ff-a-text pragati-ff-text"><span class="pragati-ff-fl">A</span>dorable</p>
+            </div>
+            <div class="pragati-ff-g">
+                <p class="pragati-ff-g-text pragati-ff-text"><span class="pragati-ff-fl">G</span>orgeous</p>
+            </div>
+            <div class="pragati-ff-a">
+                <p class="pragati-ff-a-text pragati-ff-text"><span class="pragati-ff-fl">A</span>dmirable</p>
+            </div>
+            <div class="pragati-ff-t">
+                <p class="pragati-ff-t-text pragati-ff-text"><span class="pragati-ff-fl">T</span>actful</p>
+            </div>
+            <div class="pragati-ff-i">
+                <p class="pragati-ff-i-text pragati-ff-text"><span class="pragati-ff-fl">I</span>ntelligent</p>
             </div>
         </div>
     </div>
