--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
     <!-- fonts -->
     <link rel="stylesheet" href="src/fonts/bree/stylesheet.css">
-    <link rel="stylesheet" href="src/fonts/mobius/stylesheet.css">
+    <!-- <link rel="stylesheet" href="src/fonts/mobius/stylesheet.css"> -->
     <!-- <link rel="stylesheet" href="src/fonts/sugar/stylesheet.css"> -->
     <link rel="stylesheet" href="src/fonts/love/stylesheet.css">
-    <link rel="stylesheet" href="src/fonts/surco/stylesheet.css">
-    <link rel="stylesheet" href="src/fonts/wild/stylesheet.css">
-    <link rel="stylesheet" href="https://sushantsejwal.github.io/site/src/fonts/averta/stylesheet.css">
+    <!-- <link rel="stylesheet" href="src/fonts/surco/stylesheet.css"> -->
+    <!-- <link rel="stylesheet" href="src/fonts/wild/stylesheet.css"> -->
+    <link rel="stylesheet" href="https://sushantsejwal.github.io/catching/font/sushant.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
@@ -108,28 +108,18 @@
     </div>
 
     <!-- pragati's full form -->
-    <div class="pragati-full-form-wrapper">
-        <div class="pragati-full-form">
-            <div class="pragati-ff-p">
-                <p class="pragati-ff-p-text pragati-ff-text"><span class="pragati-ff-fl">P</span>rudent</p>
+
+    <div class="my-opinion-wrapper">
+        <div class="my-opinion">
+            <p class="my-opinion-text">For me Pragati is.</p>
+        </div>
+        <div class="pragati-view">
+            <div class="pragati-view-header">
+                <div class="pragati-view-heading"><span class="pragati-ff-fl">P</span>rudent</div>
+                <div class="pragati-view-heghlight"><span class="pragati-view-heghlight-letter">P</span>RAGATI</div>
             </div>
-            <div class="pragati-ff-r">
-                <p class="pragati-ff-r-text pragati-ff-text"><span class="pragati-ff-fl">R</span>esponsible</p>
-            </div>
-            <div class="pragati-ff-a">
-                <p class="pragati-ff-a-text pragati-ff-text"><span class="pragati-ff-fl">A</span>dorable</p>
-            </div>
-            <div class="pragati-ff-g">
-                <p class="pragati-ff-g-text pragati-ff-text"><span class="pragati-ff-fl">G</span>orgeous</p>
-            </div>
-            <div class="pragati-ff-a">
-                <p class="pragati-ff-a-text pragati-ff-text"><span class="pragati-ff-fl">A</span>dmirable</p>
-            </div>
-            <div class="pragati-ff-t">
-                <p class="pragati-ff-t-text pragati-ff-text"><span class="pragati-ff-fl">T</span>actful</p>
-            </div>
-            <div class="pragati-ff-i">
-                <p class="pragati-ff-i-text pragati-ff-text"><span class="pragati-ff-fl">I</span>ntelligent</p>
+            <div class="pragati-view-body">
+                <p class="pragati-view-text">Find images in Photos, Messages, Notes, the Finder and the web right from Spotlight.3 You can even use Live Text to search for an image based on text inside it</p>
             </div>
         </div>
     </div>
@@ -142,3 +132,30 @@
 </body>
 
 </html>
+
+
+
+
+<!-- <div class="pragati-full-form">
+    <div class="pragati-ff-p">
+        <p class="pragati-ff-p-text pragati-ff-text"><span class="pragati-ff-fl">P</span>rudent</p>
+    </div>
+    <div class="pragati-ff-r">
+        <p class="pragati-ff-r-text pragati-ff-text"><span class="pragati-ff-fl">R</span>esponsible</p>
+    </div>
+    <div class="pragati-ff-a">
+        <p class="pragati-ff-a-text pragati-ff-text"><span class="pragati-ff-fl">A</span>dorable</p>
+    </div>
+    <div class="pragati-ff-g">
+        <p class="pragati-ff-g-text pragati-ff-text"><span class="pragati-ff-fl">G</span>orgeous</p>
+    </div>
+    <div class="pragati-ff-a">
+        <p class="pragati-ff-a-text pragati-ff-text"><span class="pragati-ff-fl">A</span>dmirable</p>
+    </div>
+    <div class="pragati-ff-t">
+        <p class="pragati-ff-t-text pragati-ff-text"><span class="pragati-ff-fl">T</span>actful</p>
+    </div>
+    <div class="pragati-ff-i">
+        <p class="pragati-ff-i-text pragati-ff-text"><span class="pragati-ff-fl">I</span>ntelligent</p>
+    </div>
+</div> -->
