--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
             <div class="butterflies-wrapper" id="butterflies-wrapper">
                 <div class="butterflies" id="butterflies">
                     <div class="butterfly-left butterfly">
-                        <img class="butterfly-left-img butterfly-img" src="src/wishing/background-butterflies-left.png"
-                            alt="butterfly">
+                        <img class="butterfly-left-img butterfly-img" src="src/wishing/background-butterflies-left.png" alt="butterfly">
                     </div>
                     <div class="butterfly-right butterfly">
-                        <img class="butterfly-right-img butterfly-img"
-                            src="src/wishing/background-butterflies-right.png" alt="butterfly">
+                        <img class="butterfly-right-img butterfly-img" src="src/wishing/background-butterflies-right.png" alt="butterfly">
                     </div>
                 </div>
             </div>
@@ -73,8 +71,8 @@
     </div>
 
     <!-- whom's birthday -->
-    <div class="whom-wrapper">
-        <div class="whom">
+    <div class="whom-wrapper" id="whom-wrapper">
+        <div class="whom" id="whom">
             <p class="whom-text">The Adorable,</p>
             <p class="whom-text">Amazing,</p>
             <p class="whom-text">Wonderful,</p>
@@ -113,13 +111,17 @@
         <div class="my-opinion">
             <p class="my-opinion-text">For me Pragati is.</p>
         </div>
-        <div class="pragati-view">
-            <div class="pragati-view-header">
-                <div class="pragati-view-heading"><span class="pragati-ff-fl">P</span>rudent</div>
-                <div class="pragati-view-heghlight"><span class="pragati-view-heghlight-letter">P</span>RAGATI</div>
-            </div>
-            <div class="pragati-view-body">
-                <p class="pragati-view-text">Find images in Photos, Messages, Notes, the Finder and the web right from Spotlight.3 You can even use Live Text to search for an image based on text inside it</p>
+        <div class="pragati-view-wrapper">
+            <div class="pragati-view">
+                <p class="pragati-view-text">
+                    <span class="pragati-ff-letter"><span class="pragati-ff-fl">P</span>olite </span>
+                    <span class="pragati-ff-letter"><span class="pragati-ff-fl">R</span>esponsible </span>
+                    <span class="pragati-ff-letter"><span class="pragati-ff-fl">A</span>dorable </span>
+                    <span class="pragati-ff-letter"><span class="pragati-ff-fl">G</span>orgeous </span>
+                    <span class="pragati-ff-letter"><span class="pragati-ff-fl">A</span>dmirable </span>
+                    <span class="pragati-ff-letter"><span class="pragati-ff-fl">T</span>actful </span>
+                    <span class="pragati-ff-letter"><span class="pragati-ff-fl">I</span>ntelligent </span>
+                </p>
             </div>
         </div>
     </div>
