--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     </div>
 
     <!-- pragati's birthday -->
+    <div class="pragati-birthday-wrapper-top"></div>
     <div class="pragati-birthday-wrapper">
         <div class="pragati-birthday">
             <div class="pragati">
@@ -104,6 +105,7 @@
             </div>
         </div>
     </div>
+    <div class="pragati-birthday-wrapper-bottom"></div>
 
     <!-- pragati's full form -->
 
@@ -123,6 +125,10 @@
                     <span class="pragati-ff-letter"><span class="pragati-ff-fl">I</span>ntelligent </span>
                 </p>
             </div>
+        </div>
+        <div class="my-opinion-end">
+            <p class="my-opinion-text-end">I have been with you for like 5 years and not gonna lie I haven't met or seen person like you. for me it was an amazing time.</p>
+            <p class="my-opinion-text-end"> if you ever gonna need help I can't say I will fully help you but I promise I am gonna give my 1000% to help you.</p>
         </div>
     </div>
 
