--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/loading.css">
     <link rel="stylesheet" href="css/wishing.css">
+
+    <link rel="shortcut icon" href="src/favicon.png" type="image/x-icon">
 </head>
 
 <body>
